// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible should match snapshot 1`] = `
<DocumentFragment>
  .emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #545454;
  background: transparent;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #3B3B3B;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-3:active {
  color: #000000;
  background: rgba(0, 0, 0, 0.1);
}

.emotion-3:disabled {
  background: transparent;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
}

.emotion-3 svg {
  height: 20px;
  width: 20px;
  min-height: 20px;
  max-height: 20px;
}



.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 svg {
  margin-right: 0.25rem;
}

.emotion-0 {
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
  -webkit-transition: -webkit-transform 150ms ease;
  transition: transform 150ms ease;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  border-width: 1px;
}

.emotion-5 {
  padding: 1.5rem;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}

.emotion-6 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

.emotion-6 .__admin-ui-collapsible--header {
  padding: 1rem;
  padding-left: 0rem;
}

.emotion-6 .__admin-ui-collapsible--content {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

<div
    class="emotion-8"
  >
    <header
      class="emotion-5 __admin-ui-collapsible--header"
    >
      <button
        aria-controls="react-collapsed-panel-3"
        aria-expanded="true"
        class="emotion-3"
        id="react-collapsed-toggle-3"
        role="button"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="currentColor"
              height="1.25rem"
              viewBox="0 0 256 256"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="16rem"
                width="16rem"
              />
              <polyline
                fill="none"
                points="48 160 128 80 208 160"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="18"
              />
            </svg>
            Collapsible Label
          </div>
        </div>
      </button>
      <div
        class="emotion-4"
      />
    </header>
    <div
      aria-hidden="false"
      class="emotion-7"
      id="react-collapsed-panel-3"
      style="box-sizing: border-box;"
    >
      <div
        class="__admin-ui-collapsible--content emotion-6"
      >
        Collapsible Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Collapsible should match snapshot with nesting collapsibles 1`] = `
<DocumentFragment>
  .emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #545454;
  background: transparent;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #3B3B3B;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-3:active {
  color: #000000;
  background: rgba(0, 0, 0, 0.1);
}

.emotion-3:disabled {
  background: transparent;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
}

.emotion-3 svg {
  height: 20px;
  width: 20px;
  min-height: 20px;
  max-height: 20px;
}



.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 svg {
  margin-right: 0.25rem;
}

.emotion-0 {
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
  -webkit-transition: -webkit-transform 150ms ease;
  transition: transform 150ms ease;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  background: #FFFFFF;
  border: 1px solid #DDDDDD;
  border-radius: 4px;
  border-width: 1px;
}

.emotion-5 {
  padding: 1.5rem;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}

.emotion-12 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

.emotion-12 .__admin-ui-collapsible--header {
  padding: 1rem;
  padding-left: 0rem;
}

.emotion-12 .__admin-ui-collapsible--content {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

<div
    class="emotion-14"
  >
    <header
      class="emotion-5 __admin-ui-collapsible--header"
    >
      <button
        aria-controls="react-collapsed-panel-4"
        aria-expanded="true"
        class="emotion-3"
        id="react-collapsed-toggle-4"
        role="button"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="currentColor"
              height="1.25rem"
              viewBox="0 0 256 256"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="16rem"
                width="16rem"
              />
              <polyline
                fill="none"
                points="48 160 128 80 208 160"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="18"
              />
            </svg>
            Collapsible Label
          </div>
        </div>
      </button>
      <div
        class="emotion-4"
      />
    </header>
    <div
      aria-hidden="false"
      class="emotion-13"
      id="react-collapsed-panel-4"
      style="box-sizing: border-box;"
    >
      <div
        class="__admin-ui-collapsible--content emotion-12"
      >
        <div
          class="emotion-14"
        >
          <header
            class="emotion-5 __admin-ui-collapsible--header"
          >
            <button
              aria-controls="react-collapsed-panel-5"
              aria-expanded="true"
              class="emotion-3"
              id="react-collapsed-toggle-5"
              role="button"
              tabindex="0"
              type="button"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <svg
                    class="emotion-0"
                    fill="currentColor"
                    height="1.25rem"
                    viewBox="0 0 256 256"
                    width="1.25rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="none"
                      height="16rem"
                      width="16rem"
                    />
                    <polyline
                      fill="none"
                      points="48 160 128 80 208 160"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="18"
                    />
                  </svg>
                  Collapsible Label
                </div>
              </div>
            </button>
            <div
              class="emotion-4"
            />
          </header>
          <div
            aria-hidden="false"
            class="emotion-13"
            id="react-collapsed-panel-5"
            style="box-sizing: border-box;"
          >
            <div
              class="__admin-ui-collapsible--content emotion-12"
            >
              Collapsible Content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
